(test
 (name test_rsa)
 (libraries ounit2 encryptor))

(test
 (name test_ecc)
 (libraries ounit2 encryptor))

(test
 (name test_blowfish)
 (libraries ounit2 encryptor))

(test
 (name test_sh3)
 (libraries ounit2 encryptor))

(test
 (name test_aes128)
 (libraries base64 ounit2 encryptor bisect_ppx))



